--- a/PhoneGapiOS/Eventually/www/index.html
+++ b/PhoneGapiOS/Eventually/www/index.html
@@ -17,13 +17,11 @@
 
 
 	// If you want to prevent dragging, uncomment this section
-	/*
 	function preventBehavior(e) 
 	{ 
       e.preventDefault(); 
     };
 	document.addEventListener("touchmove", preventBehavior, false);
-	*/
 	
 	/* If you are supporting your own protocol, the var invokeString will contain any arguments to the app launch.
 	see http://iphonedevelopertips.com/cocoa/launching-your-own-application-via-a-custom-url-scheme.html
@@ -53,12 +51,7 @@
     </script>
   </head>
   <body onload="onBodyLoad()">
-	<h1>Hey, it's PhoneGap!</h1>
-	<p>Don't know how to get started? Check out <em><a target="_blank" href="http://www.phonegap.com/start#ios-x4">PhoneGap Start</a></em>
-	<br />
-	<ol>
-		<li>Check your console log for any white-list rejection errors.</li>
-		<li>Add your allowed <strong>hosts</strong> in PhoneGap.plist/ExternalHosts (wildcards OK, don't enter the URL scheme)</li>
-	</ol>
+    <ul data-role=>
+    
   </body>
 </html>
